--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,6 @@
 
         <section class="products">... products go here ...</section>
         <div id="root"></div>
-        <script src="../src/app.js"></script>
+        <script src="../src/index.js"></script>
     </body>
 </html>
