--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="../src/index.js"></script>
+        <script type="text/babel" src="../src/app.js"></script>
     </body>
 </html>
